--- a/.vitepress/theme/style.less
+++ b/.vitepress/theme/style.less
@@ -8,7 +8,7 @@
  *
  * Each colors have exact same color scale system with 3 levels of solid
  * colors with different brightness, and 1 soft color.
- * 
+ *
  * - `XXX-1`: The most solid color used mainly for colored text. It must
  *   satisfy the contrast ratio against when used on top of `XXX-soft`.
  *
@@ -213,4 +213,8 @@
 
 .VPButton {
   cursor: pointer;
+}
+
+.VPNavBarTitle .VPImage.logo {
+  border-radius: 4px;
 }
